--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/mocha/bin/mocha test"
   },
   "repository": {
     "type": "git",
@@ -27,7 +27,19 @@
   },
   "homepage": "https://github.com/dimichgh/trooba-xhr-transport#readme",
   "devDependencies": {
-    "mocha": "^3.1.2"
+    "app-module-path": "^2.1.0",
+    "async": "^2.1.2",
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "lasso": "^2.8.1",
+    "lasso-marko": "^2.0.7",
+    "marko": "^2.11.0",
+    "marko-widgets": "^5.3.7",
+    "mocha": "^3.1.2",
+    "shelljs": "^0.7.5",
+    "supertest": "^2.0.1",
+    "trooba": "file:../trooba",
+    "zombie": "^5.0.4"
   },
   "dependencies": {
     "jsonpipe": "^2.1.1",
