--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
     "shelljs": "^0.7.5",
     "sinon": "^1.17.6",
     "supertest": "^2.0.1",
-    "trooba": "file:../trooba",
+    "trooba": "^0",
     "zombie": "^5.0.4"
   },
   "dependencies": {
     "jsonpipe": "^2.1.1",
-    "trooba-http-api": "file:../trooba-http-api"
+    "trooba-http-api": "^1"
   }
 }
