--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,16 @@ node_js:
 - "6"
 - "7"
 language: node_js
+require: sudo
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y libkrb5-dev
+  # update the compiler for node-gyp
+  - sudo apt-get install python-software-properties
+  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+  - sudo apt-get -qq update
+  - sudo apt-get install gcc-5 g++-5
+  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-5 80 --slave /usr/bin/g++ g++ /usr/bin/g++-5
+  - sudo update-alternatives --set gcc /usr/bin/gcc-5
 script: "npm test"
 sudo: false
