--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,10 @@ node_js:
 - "6"
 - "7"
 language: node_js
-script: "npm test"
 env: DEBUG=zombie
+install:
+- npm install -g codecov istanbul
+script:
+- npm test
+- istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec
+- codecov
