--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha test",
+    "test": "./node_modules/.bin/mocha test",
     "test-coverage": "./node_modules/.bin/istanbul cover ./node_modules/.bin/mocha --report lcovonly -- -R spec"
   },
   "repository": {
