--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ node_js:
 language: node_js
 env: DEBUG=zombie
 install:
+- npm install
 - npm install -g codecov istanbul
 script:
 - npm test
-- istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec
+- istanbul cover ./node_modules/.bin/mocha --report lcovonly -- -R spec
 - codecov
