--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ install:
 - npm install -g codecov istanbul
 script:
 - npm test
-- istanbul cover ./node_modules/.bin/mocha --report lcovonly -- -R spec
+- istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec
 - codecov
